--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
           set -e
 
-          APP_DIR="/var/www/myapp"
+          APP_DIR="/var/www/homepages_backend"
 
           # clone or pull
           if [ ! -d "$APP_DIR/.git" ]; then
