--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
             git clone https://github.com/${{ github.repository }} $APP_DIR
           else
             cd $APP_DIR
-            git reset --hard
-            git pull origin main
+            git fetch --all
+            git reset --hard origin/main
+            git clean -fd
           fi
 
           cd $APP_DIR
